moves site background color gradient from body to html to fix bug created from refactoring to gatsby bg image for hero. implements smoothscroll polyfill for scroll to top smooth scrolling on safari IE etc.

--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -40,7 +40,8 @@ footer {
   background: none;
   border: none;
   border-radius: 50px;
-  padding: 0 10px;
+  width: 50px;
+  height: 50px;
   color: #d9d9d9;
 }
 
