--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,13 +5,15 @@ html {
   box-sizing: border-box;
   overflow-y: scroll;
   overflow-x: hidden;
+  background: rgb(51, 51, 51);
+  background: linear-gradient(90deg, rgba(51, 51, 51, 1) 32%, rgba(64, 64, 64, 1) 75%);
 }
 
 body {
   position: relative;
   margin: 0;
-  background: rgb(51, 51, 51);
-  background: linear-gradient(90deg, rgba(51, 51, 51, 1) 32%, rgba(64, 64, 64, 1) 75%);
+  /* background: rgb(51, 51, 51);
+  background: linear-gradient(90deg, rgba(51, 51, 51, 1) 32%, rgba(64, 64, 64, 1) 75%); */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: hsla(0, 0%, 0%, 0.8);
